Add unit tests for notification controllers